init core and hmi

--- a/com.perso.footcelad.parent/pom.xml
+++ b/com.perso.footcelad.parent/pom.xml
@@ -8,5 +8,6 @@
   <description>Le father</description>
   <modules>
   	<module>com.perso.footcelad.core</module>
+  	<module>com.perso.footcelad.hmi</module>
   </modules>
 </project>
