--- a/com.perso.footcelad.parent/com.perso.footcelad.hmi/pom.xml
+++ b/com.perso.footcelad.parent/com.perso.footcelad.hmi/pom.xml
@@ -54,6 +54,11 @@
 			<classifier>sources</classifier>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.gwtbootstrap</groupId>
+			<artifactId>gwt-bootstrap</artifactId>
+			<version>2.2.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
