affichage de google maps api et redirection vers google maps avec un itinéraire en paramètre

--- a/com.perso.footcelad.parent/com.perso.footcelad.hmi/pom.xml
+++ b/com.perso.footcelad.parent/com.perso.footcelad.hmi/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>gwt-bootstrap</artifactId>
 			<version>2.2.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.gwt.google-apis</groupId>
+			<artifactId>gwt-maps</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
