Remove .settings/ from conf

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+.settings/
 
 package-info.java
 *.class
@@ -6,8 +7,8 @@ bin/
 
 .gwt/
 Thumbs.db
-/com.perso.footcelad.parent/.settings
-/com.perso.footcelad.core/.settings
-/com.perso.footcelad.hmi/.settings
+/com.perso.footcelad.parent/.settings/
+/com.perso.footcelad.core/.settings/
+/com.perso.footcelad.hmi/.settings/
 /com.perso.footcelad.parent/com.perso.footcelad.core/.classpath
 /com.perso.footcelad.parent/com.perso.footcelad.hmi/.classpath
